# zellij_blocks

./: Cargo.toml  README.md  justfile  plugin-dev-workspace.kdl
dev/scripts/: install  toggle_bar
src/: main.rs
